[gd_scene load_steps=4 format=3 uid="uid://ka8u2qp71805"]

[ext_resource type="Script" path="res://main.gd" id="1_qvxj5"]
[ext_resource type="PackedScene" uid="uid://rdaagd01p35o" path="res://deck.tscn" id="1_vdhe0"]
[ext_resource type="PackedScene" uid="uid://bcid70m8bufso" path="res://start.tscn" id="2_oid3n"]

[node name="Main" type="Node2D"]
script = ExtResource("1_qvxj5")

[node name="Start" parent="." instance=ExtResource("2_oid3n")]

[node name="Table" type="Node2D" parent="."]

[node name="FirstSpot" type="Marker2D" parent="Table"]
position = Vector2(577, 323)

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="Deck" parent="UI" node_paths=PackedStringArray("default_spot") instance=ExtResource("1_vdhe0")]
position = Vector2(69, 565)
scale = Vector2(1.5, 1.5)
default_spot = NodePath("../../Table/FirstSpot")

[node name="Button" type="Button" parent="UI"]
offset_left = 39.0
offset_top = 418.0
offset_right = 138.0
offset_bottom = 458.0
text = "Start Game"

[node name="Player Count" type="Label" parent="UI"]
offset_left = 39.0
offset_top = 38.0
offset_right = 156.0
offset_bottom = 61.0
text = "Player Count: 0"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../Spawn")
spawn_limit = 4

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(577, 323)

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="child_entered_tree" from="Spawn" to="." method="_on_spawn_child_entered_tree"]
[connection signal="child_exiting_tree" from="Spawn" to="." method="_on_spawn_child_exiting_tree"]
